@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Move data from response headers to simple plack values
 
 0.001000  2015-08-14 11:36:34-07:00 America/Los_Angeles
  - Initial Release
